--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 [dependencies]
 clap = { version = "4.0.22", features = ["cargo", "wrap_help", "derive"] }
 colored = "2.0.0"
+lazy_static = "1.4.0"
 regex = "1.7.0"
